update: GitHub Actions Spring Boot CI/CD 가이드 Maven→Gradle 전환 및 최신화
- Maven 빌드 시스템을 Gradle로 전환
- 모든 명령어를 mvn에서 ./gradlew로 변경
- 캐시 설정을 Gradle용으로 업데이트 (~/.m2 → ~/.gradle)
- XML 기반 경로를 Gradle 구조로 변경 (target/ → build/)
- GitHub Actions 버전을 최신으로 업데이트 (v4, v6)
- Java 기본 버전을 17에서 21로 업그레이드
- Dockerfile을 Gradle용으로 개선 및 보안 강화
- 테스트 보고서 경로를 Gradle 구조로 수정